# rednotebook

./: .bzrignore  .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.md  CHANGELOG.txt  Dockerfile  LICENSE  MANIFEST.in  README  README.Packagers  README.md  README.txt  TODO  TODO.md  appveyor.yml  homebrew-rednotebook-cask.rb  macosx_rednotebook.spec  pyproject.toml  rednotebook.appdata.xml  rednotebook.desktop  release.py  requirement.txt  run  run.sh  setup.cfg  setup.py  tox.ini  win-build.py
.github/: copilot-instructions.md  issue_template.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-deb.yml  build-windows.yml  macos.yml  run-tests.yml  ubuntu-20.04.yml  ubuntu.yml  web.yml
data/: app.rednotebook.rednotebook.appdata.xml  com.github.jendrikseipp.rednotebook.appdata.xml  com.github.jendrikseipp.rednotebook.desktop  rednotebook.appdata.xml  rednotebook.desktop
debian/: README.source  changelog  clean  control  copyright  gbp.conf  menu  rednotebook-crashdb.conf  rednotebook.1  rednotebook.install  rednotebook.links  rednotebook.manpages  rules  source_rednotebook.py  watch
debian/upstream/: metadata
dev/: README.txt  bugs.txt  build-script.sh  build-tarball.sh  build_deb.txt  build_translations.py  buildmo.py  check-style.sh  comment_imports.py  dev-notes.txt  features.txt  find-dead-code  find-dead-code.sh  generate-help.py  generate-pot.sh  gladeGui.wxg  mac-bundle.txt  mac-homebrew.md  mac-homebrew.txt  profiler.py  release.py  release.txt  run-tests.sh  update-translations.sh  upload-file.py  upload-file.sh  upload-web.sh  whitelist.py
dev/benchmarks/: findall.py
doc/: help.html  source.txt
po/: ar.po  ast.po  be.po  bg.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fo.po  fr.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  ie.po  it.po  ja.po  ka.po  kk.po  ko.po  ky.po  lt.mo  lt.po  ml.po  mn.po  ms.po  my.po  nb.po  (+36 more)
rednotebook/: __init__.py  backup.py  config.py  configuration.py  data.py  encrypt.py  export.py  help.py  index.py  info.py  journal.py  redNotebook.py  rednotebook  storage.py  templates.py  txt2tags.py  undo.py
rednotebook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rednotebook/files/: default.cfg  mainWindow.glade  main_window.glade  rednotebook-highlight-style.xml  stylesheet.css  t2t.lang
rednotebook/gui/: browser.py  browser_cef.py  categories.py  clouds.py  contentTree.py  customwidgets.py  diaryGui.py  editor.py  export.py  exportAssistant.py  export_assistant.py  exports.py  format_menu.py  htmlparser.py  htmltextview.py  imports.py  insert.py  insert_menu.py  journalgeist.py  mainWindow.py  main_window.py  menu.py  mozembed.py  options.py  richtext.py  search.py  t2t_highlight.py  widgets.py  wxGladeGui.py
rednotebook/import/: __init__.py
rednotebook/imports/: __init__.py  plaintext.py
rednotebook/util/: dates.py  (+7 more)
scripts/: rednb-verify.py  rednotebook_merge.py  text2rednotebook.py
src/: redNotebook.py
tests/: conftest.py  test_configuration.py  test_corrupted_files.py  test_day.py  test_filesystem.py  test_hashtags.py  test_imports.py  test_index.py  test_journal.py  test_markup.py  test_utils.py
web/: .gitignore  build.sh  download.html  downloads.html  index.html  install.html  participate.html  screenshots.html
win/: README.txt  build-exe.bat  build-installer.py  build-translations.py  build-zipball.py  create-build-env.py  cross-compile-exe.py  depcheck.py  fetch-dictionary.py  gtkrc  hook-cefpython3.py  hook-gi.repository.GtkSource.py  installer.nsi  rednotebook.iss  rednotebook.spec  release.bat  release.py  remove-build-dirs.py  requirements.txt  run-rednotebook-debug.bat  run-rednotebook.bat  sampleapp.py  setup.py  test-installer.py  utils.py  win-build.txt
(+73 files in other folders)
