[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
  # Custom
  | external
)/
'''

[tool.isort]
case_sensitive = false
force_single_line = false
force_sort_within_sections = true
include_trailing_comma = true
known_first_party = "rednotebook"
known_third_party = "gi,pytest"
line_length = 88
lines_after_imports = 2  # -1 puts 2 lines before classes and functions, otherwise 1 line
multi_line_output = 3
order_by_type = false
skip= "external,journal.py,main_window.py"
