[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

# Configuration moved to [tool.ruff] section above

[tool.ruff]
line-length = 88
target-version = "py38"
# Treat "_" as a builtin (same as flake8 config)
builtins = ["_"]
# Exclude external directory (same as black/flake8/etc)
exclude = ["rednotebook/external/*"]

[tool.ruff.lint]
# Enable the same rules that were previously handled by flake8, isort, and pyupgrade
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
# Ignore the same rules that were ignored in flake8 config
ignore = [
    "E203",  # whitespace before ':' (not compliant with PEP 8)
    "E402",  # module level import not at top of file
    "F821",  # undefined name "_"
]

[tool.ruff.lint.per-file-ignores]
# Allow certain files to have different rules if needed
"rednotebook/journal.py" = ["I001"]  # Skip isort for this file (was excluded from isort)
"rednotebook/main_window.py" = ["I001"]  # Skip isort for this file (was excluded from isort)

[tool.ruff.lint.isort]
# Match the existing isort configuration
case-sensitive = false
force-single-line = false
force-sort-within-sections = true
known-first-party = ["rednotebook"]
known-third-party = ["gi", "pytest"]
lines-after-imports = 2

[tool.ruff.format]
# Ruff formatter configuration

[tool.vulture]
min_confidence = 0
paths = ["rednotebook/", "dev/whitelist.py"]
exclude = ["external/"]
